<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCD0D3"
    android:id="@+id/ll"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/enter_your_weight"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        android:ems="10"
        />
    <EditText
        android:id="@+id/hf"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/enter_your_height_in_feet"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        android:ems="10"
        />
    <EditText
        android:id="@+id/hi"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/enter_your_height_in_inches"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        android:ems="10"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bmi"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        android:backgroundTint="#FF9800"
        />
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        />
</LinearLayout>